# emnist-character-recognition-example

./: .gitignore  README.md  pyproject.toml
scripts/: cnn_model.py  main.ipynb  utils.py
